--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Redis":  "localhost:6379"
+    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=Password123;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,10 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "EventBus": {
-    "HostName": "localhost",
-    "UserName": "guest",
-    "Password":  "guest"
-  }
+  "AllowedHosts": "*"
 }
