--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     basketdb:
         image: redis
 
+    orderdb:
+        image: mcr.microsoft.com/mssql/server
+
     rabbitmq:
         image: rabbitmq:3-management-alpine
     
@@ -22,4 +25,18 @@ services:
         build:
             context: .
             dockerfile: src/Basket/Basket.API/Dockerfile
+
+
+    ordering.api:
+        image: ${DOCKER_REGISTRY-}orderingapi
+        build:
+            context: .
+            dockerfile: src/Ordering/Ordering.API/Dockerfile
+
+
+    ocelotapigateway:
+        image: ${DOCKER_REGISTRY-}ocelotapigateway
+        build:
+            context: .
+            dockerfile: src/ApiGateway/OcelotAPIGateway/Dockerfile
 
