--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=Password123;"
+    "OrderConnection": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=Password123;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
+  }
 }
